# garda

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  server_test.cpp
.devcontainer/: devcontainer.json
calculator/include/: calculator.h
calculator/src/: calculator.cpp
calculator/test/: calculator_test.cpp
client/: calc_cli.cpp
test/: client_test.cpp  mock_server.cpp  server_test.cpp
